More progress towards formatting Quan's proprioceptive chapter
Left to do:
Materials and Methods
Supplementary Figures
Supplementary Video

--- a/references.bib
+++ b/references.bib
@@ -59,8 +59,7 @@
 	author = {Kaplan, Joshua},
 	month = dec,
 	year = {2008},
-	note = {At Mass General Hospital, Boston, {MA.}},
-	annote = {To discuss {PQE.} Josh Kaplan said that he was not interested in  my research idea.}
+	note = {At Mass General Hospital, Boston, {MA.}}
 },
 
 @article{rex_tyramine_2004,
@@ -97,8 +96,7 @@
 @misc{_jorgensen_????,
 	title = {Jorgensen Lab Publications},
 	url = {http://www.biology.utah.edu/jorgnsen_cgi_bin/publications},
-	howpublished = {http://www.biology.utah.edu/jorgnsen\_cgi\_bin/publications},
-	annote = {{McIntire} {SL}, Reimer {RJ}, Schuske K, Edwards {RH}, Jorgensen {EM} . 1997 . Identification and characterization of the vesicular {GABA} transporter . Nature . 389(6653) : 870-876 .}
+	howpublished = {http://www.biology.utah.edu/jorgnsen\_cgi\_bin/publications}
 },
 
 @article{tsien_green_1998,
@@ -129,8 +127,7 @@
 	year = {1999},
 	note = {{PMID:} 10571229},
 	keywords = {Amino Acid Sequence, Animals, Animals, Genetically Modified, Apoptosis, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Caspase 1, Gene Expression, Genes, Dominant, Interneurons, Ion Channels, Mechanoreceptors, Membrane Proteins, Molecular Sequence Data, Motor Activity, Mutation, Nerve Tissue Proteins, Neural Pathways, Neurons, Phenotype, Promoter Regions, Genetic, Quan Recommends, Receptors, {AMPA}, Receptors, Glutamate, Sensation},
-	pages = {347--361},
-	annote = {This is an awesome paper that touches on choosing betwen forward and backward locomotion. This should be my guide on decision making.}
+	pages = {347--361}
 },
 
 @article{white_structure_1976,
@@ -221,9 +218,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	month = nov,
 	year = {1995},
 	keywords = {{PQE}  - definite citation, Sniffing / Foraging},
-	pages = {82--85},
-	annote = {{“Wild-type} animals move the tip of the head in a rhythmic motion, termed foraging behavior. Glr-1 mutants foraged slowly, whereas transgenic animals carry extra copies of the wild-type glr-1 gene foraged hyperactively (data not shown). Similarly,t reatment with {AMPA} caused hyperactive foraging. These results demonstrate that {GLR-1} receptors regulate the {RMD} neurons.”},
-	annote = {{"Ablation} of the cholinergic {RMD} neurons result in the loss of head oscillations" from Alkema, {"Tyramine} Functions {INdependentyly} of Cotpamine..."}
+	pages = {82--85}
 },
 
 @article{ryu_thermotaxis_2002,
@@ -313,14 +308,17 @@ For studying the function of specific neurons in their native circuitry, it is d
 	year = {2004},
 	note = {{PMC517925}},
 	keywords = {Direct Competitor, Image Processing, {PQE}  - definite citation},
-	pages = {115},
-	annote = {Competing (inferior) image processing technique from the Schafer.
+	pages = {115}
+},
 
-Disadvantages of their method: requires  user input. Relies on  erosion and grow technique for finding the skeleton. Imprecise. Slow. Inelegant.
-
- 
-
- }
+@phdthesis{chen_neuronal_2007,
+	address = {Cold Sporing Harbor Laboratory,: Cold Spring Harbor},
+	type = {Thesis},
+	title = {Neuronal Networ of C. elegans: from Anatomy to Behavior},
+	school = {Watson School of Biological Sciences},
+	author = {Chen, Beth L},
+	year = {2007},
+	note = {p. 96}
 },
 
 @misc{_yongshin_????,
@@ -600,19 +598,7 @@ Disadvantages of their method: requires  user input. Relies on  erosion and grow
 	year = {2010},
 	note = {{PMID:} 21059909},
 	keywords = {Journal Club},
-	pages = {20405--20410},
-	annote = {Information on the Gonad, relavent to Figure 1c-d:
-
-http://www.wormatlas.org/ver1/handbook/reproductivesystem/reproductivesystem1.htm
-
- 
-
-In particular: {http://www.wormatlas.org/ver1/handbook/reproductivesystem/reproductivesystem1.htm\#Thedistaltipcell}},
-	annote = {Overvew of Reproductive System with Picture:
-
-{http://www.wormatlas.org/hermaphrodite/reproductive/Reproframeset.html}
-
-http://www.wormatlas.org/ver1/handbook/reproductivesystem/reproductivesystem.htm}
+	pages = {20405--20410}
 },
 
 @article{chalfie_neural_1985,
@@ -693,10 +679,7 @@ http://www.wormatlas.org/ver1/handbook/reproductivesystem/reproductivesystem.htm
 	year = {2004},
 	note = {{PMID:} 15194122},
 	keywords = {Action Potentials, Animals, Central Nervous System, Genes, Reporter, Humans, Magnetics, Molecular Biology, Neural Pathways, Neurons, Signal Transduction, Synaptic Transmission},
-	pages = {395--402},
-	annote = {Has my quote that current optical methods for viewing calcium levels are on the order of {0.1-1Hz.} Which is way to slow for foraging. Huang says the average foraging frequency is 4.6 Hz.
-
- }
+	pages = {395--402}
 },
 
 @article{landro_role_1994,
@@ -804,12 +787,7 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	title = {Zotero Quick Start Guide},
 	url = {http://zotero.org/support/quick_start_guide},
 	author = {Center for History and New Media},
-	howpublished = {http://zotero.org/support/quick\_start\_guide},
-	annote = {Welcome to Zotero!
-
-View the Quick Start Guide to learn how to begin collecting, managing, citing, and sharing your research sources.
-
-Thanks for installing Zotero.}
+	howpublished = {http://zotero.org/support/quick\_start\_guide}
 },
 
 @book{roberts_programming_1997,
@@ -826,15 +804,14 @@ Thanks for installing Zotero.}
 	title = {The Structure of the Nervous System of the Nematode Caenorhabditis elegans},
 	volume = {314},
 	issn = {00804622},
-	url = {http://www.jstor.org.ezp-prod1.hul.harvard.edu/stable/2990196},
+	url = {http://www.jstor.org/stable/2990196},
 	number = {1165},
 	journal = {Philosophical Transactions of the Royal Society of London. Series B, Biological Sciences},
 	author = {White, J. G. and Southgate, E. and Thomson, J. N. and Brenner, S.},
 	month = nov,
 	year = {1986},
 	keywords = {circuitry, {PQE}  - definite citation},
-	pages = {1--340},
-	annote = {{"Mind} of the Worm" Joshua Kaplan at {MGH}  {(Worked} with Horvitz) says this is a must read. Has information about anatomy and circuitry.}
+	pages = {1--340}
 },
 
 @article{wyart_optogenetic_2009,
@@ -888,8 +865,7 @@ Thanks for installing Zotero.}
 	author = {Kaplan, J M and Horvitz, H R},
 	year = {1993},
 	keywords = {{PQE}  - definite citation, Sniffing / Foraging},
-	pages = {2227--2231},
-	annote = {Mentions {Foraging/Sniffing.} Says its {"Unpublished"}}
+	pages = {2227--2231}
 },
 
 @article{alavez_amyloid-binding_2011,
@@ -961,10 +937,7 @@ Thanks for installing Zotero.}
 	year = {1997},
 	note = {{PMID:} 9074782},
 	keywords = {Animals, Caenorhabditis elegans, Humans, Mechanoreceptors, Models, Molecular, Physical Stimulation, {PQE}  - definite citation, Signal Transduction, Touch},
-	pages = {659--89},
-	annote = {Diagram of touch sensory neurons in C. Elegans
-
- }
+	pages = {659--89}
 },
 
 @article{pierce-shimomura_fundamental_1999,
@@ -1013,6 +986,22 @@ Thanks for installing Zotero.}
 	pages = {439--456}
 },
 
+@article{dent_genetics_2000,
+	title = {The genetics of ivermectin resistance in Caenorhabditis elegans},
+	volume = {97},
+	issn = {0027-8424},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/10716995},
+	abstract = {The ability of organisms to evolve resistance threatens the effectiveness of every antibiotic drug. We show that in the nematode Caenorhabditis elegans, simultaneous mutation of three genes, avr-14, avr-15, and glc-1, encoding glutamate-gated chloride channel {(GluCl)} alpha-type subunits confers high-level resistance to the antiparasitic drug ivermectin. In contrast, mutating any two channel genes confers modest or no resistance. We propose a model in which ivermectin sensitivity in C. elegans is mediated by genes affecting parallel genetic pathways defined by the family of {GluCl} genes. The sensitivity of these pathways is further modulated by unc-7, unc-9, and the Dyf (dye filling defective) genes, which alter the structure of the nervous system. Our results suggest that the evolution of drug resistance can be slowed by targeting antibiotic drugs to several members of a multigene family.},
+	number = {6},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	author = {Dent, J A and Smith, M M and Vassilatis, D K and Avery, L},
+	month = mar,
+	year = {2000},
+	note = {{PMID:} 10716995},
+	keywords = {Animals, Antinematodal Agents, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Chloride Channels, Cloning, Molecular, Drug Resistance, Electrophysiology, Glutamic Acid, Helminth Proteins, Ivermectin, Models, Biological, Models, Genetic, Mutation, Pharynx, Protein Binding},
+	pages = {2674--2679}
+},
+
 @article{bargmann_signal_1998,
 	title = {Signal transduction in the Caenorhabditis elegans nervous system},
 	volume = {21},
@@ -1025,10 +1014,7 @@ Thanks for installing Zotero.}
 	year = {1998},
 	note = {{PMID:} 9530498},
 	keywords = {Animals, Caenorhabditis elegans, Nervous System Physiology, Review, Signal Transduction},
-	pages = {279--308},
-	annote = {Awesome Review.
-
-{"About} half of the neurons, including most sensory neurons, are found in the head  surrounding a central neuropil called the nerve ring."}
+	pages = {279--308}
 },
 
 @article{kibler_role_2006,
@@ -1043,8 +1029,7 @@ Thanks for installing Zotero.}
 	month = feb,
 	year = {2006},
 	keywords = {Abdomen, Abdominal Muscles -- Physiology, Balance, Postural, Biomechanics, Clinical Assessment Tools, Exercise Intensity, Exercise Physiology, Functional Status, Hip, Lower Extremity, Muscle Contraction -- Physiology, Muscle Strength, Muscle Strength -- Evaluation, Muscle Strengthening, Muscle Weakness, Pelvis, Physical Examination, Physical Performance, Pliability, Rehabilitation, Spine, Sports, Therapeutic Exercise, Torso, Torso -- Physiology},
-	pages = {189--198},
-	annote = {Accession Number: 2009161674. Language: English. Entry Date: 20060602. Revision Date: 20060616. Publication Type: journal article; pictorial; review. Journal Subset: Allied Health; Australia \& New Zealand; {Online/Print;} Peer Reviewed. Special Interest: Physical Therapy; Sports Medicine. No. of Refs: 42 ref. {NLM} {UID:} 8412297.}
+	pages = {189--198}
 },
 
 @article{colbert_osm-9_1997,
@@ -1153,8 +1138,7 @@ Thanks for installing Zotero.}
 	year = {2006},
 	note = {{PMID:} 16988438},
 	keywords = {Algorithms, Animals, Behavior, Animal, Caenorhabditis elegans, Image Interpretation, {Computer-Assisted}, Locomotion, Microscopy, Video, Motor Activity, Mutation, Software},
-	pages = {241--51},
-	annote = {This provides a good review of why automated imaging techniques are good.}
+	pages = {241--51}
 },
 
 @article{alkema_tyramine_2005,
@@ -1171,10 +1155,7 @@ Thanks for installing Zotero.}
 	year = {2005},
 	note = {{PMID:} 15848803},
 	keywords = {Amino Acid Sequence, Animals, Blotting, Western, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Chromatography, High Pressure Liquid, Humans, Immunohistochemistry, Models, Neurological, Molecular Sequence Data, Nervous System Physiological Phenomena, Neurotransmitter Agents, Octopamine, Polymerase Chain Reaction, Sequence Homology, Amino Acid, Tyramine, Tyrosine {3-Monooxygenase}, Tyrosine Decarboxylase},
-	pages = {247--260},
-	annote = {Clearest picture yet of what controls foraging.
-
-In depth discussion of neurons that inhibit "head oscillations" during backwards motion in response to touch. See especially Figure 8.}
+	pages = {247--260}
 },
 
 @article{chalfie_developmental_1981,
@@ -1231,6 +1212,22 @@ are driven and organized by proprioceptive coupling},
 	year = {2011}
 },
 
+@article{esmaeili_c._2002,
+	title = {The C. elegans even-skipped homologue, vab-7, specifies {DB} motoneurone identity and axon trajectory},
+	volume = {129},
+	issn = {0950-1991},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/11861469},
+	abstract = {Locomotory activity is defined by the specification of motoneurone subtypes. In the nematode, C. elegans, {DA} and {DB} motoneurones innervate dorsal muscles and function to induce movement in the backwards or forwards direction, respectively. These two neurone classes express separate sets of genes and extend axons with oppositely directed trajectories; anterior {(DA)} versus posterior {(DB).} The {DA-specific} homeoprotein {UNC-4} interacts with {UNC-37/Groucho} to repress the {DB} gene, acr-5 (nicotinic acetylcholine receptor subunit). We show that the C. elegans even-skipped-like homoedomain protein, {VAB-7}, coordinately regulates different aspects of the {DB} motoneurone fate, in part by repressing unc-4. Wild-type {DB} motoneurones express {VAB-7}, have posteriorly directed axons, express {ACR-5} and lack expression of the homeodomain protein {UNC-4.} In a vab-7 mutant, ectopic {UNC-4} represses acr-5 and induces an anteriorly directed {DB} axon trajectory. Thus, vab-7 indirectly promotes {DB-specific} gene expression and posteriorly directed axon outgrowth by preventing {UNC-4} repression of {DB} differentiation. Ectopic expression of {VAB-7} also induces {DB} traits in an unc-4-independent manner, suggesting that {VAB-7} can act through a parallel pathway. This work supports a model in which a complementary pair of homeodomain transcription factors {(VAB-7} and {UNC-4)} specifies differences between {DA} and {DB} neurones through inhibition of the alternative fates. The recent findings that Even-skipped transcriptional repressor activity specifies neurone identity and axon guidance in the mouse and Drosophila motoneurone circuit points to an ancient origin for homeoprotein-dependent mechanisms of neuronal differentiation in the metazoan nerve cord.},
+	number = {4},
+	journal = {Development {(Cambridge}, England)},
+	author = {Esmaeili, Behrooz and Ross, Jennifer M and Neades, Cara and Miller, David M, 3rd and Ahringer, Julie},
+	month = feb,
+	year = {2002},
+	note = {{PMID:} 11861469},
+	keywords = {Animals, Axons, Bacterial Proteins, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Cell Polarity, Drosophila Proteins, Gene Expression, Helminth Proteins, Homeodomain Proteins, Motor Neurons, Muscle Proteins, Mutagenesis, Nuclear Proteins, Protozoan Proteins, Transcription Factors},
+	pages = {853--862}
+},
+
 @article{friesen_neuronal_1978,
 	title = {Neuronal control of swimming in the medicinal leech. {IV.} Identification of a network of oscillatory interneurones},
 	volume = {75},
@@ -1255,18 +1252,7 @@ are driven and organized by proprioceptive coupling},
 	author = {Elkes, D. A. and Kaplan, Joshua M.},
 	year = {1993},
 	keywords = {Caenorhabditis elegans, {IL1}, laser ablation, {OLQ}, {RMD}, Sniffing / Foraging},
-	pages = {66},
-	annote = {I think this is no longer valid. The Nature papre, Synaptic code for sensory modealitis repalces thsi article.
-
- 
-
-C. Elegans: Loopy Foraging. Laser ablation
-
-{OLQ}, {IL1} ,and {RMD} neurons control foraging behavior. Laser ablation of any of these three classes of neurons results in an abnormally slow foraging rate, as well as an abnormal pattern of foraging movements. Laser operated animals bend their noses further dorsally and ventrally while foraging, which we call loopy foraging.
-
- 
-
- }
+	pages = {66}
 },
 
 @article{chatzigeorgiou_specific_2010,
@@ -1366,6 +1352,23 @@ C. Elegans: Loopy Foraging. Laser ablation
 	pages = {229--234}
 },
 
+@article{tian_imaging_2009,
+	title = {Imaging neural activity in worms, flies and mice with improved {GCaMP} calcium indicators},
+	volume = {6},
+	issn = {1548-7105},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19898485},
+	doi = {10.1038/nmeth.1398},
+	abstract = {Genetically encoded calcium indicators {(GECIs)} can be used to image activity in defined neuronal populations. However, current {GECIs} produce inferior signals compared to synthetic indicators and recording electrodes, precluding detection of low firing rates. We developed a single-wavelength {GCaMP2-based} {GECI} {(GCaMP3)}, with increased baseline fluorescence (3-fold), increased dynamic range (3-fold) and higher affinity for calcium (1.3-fold). We detected {GCaMP3} fluorescence changes triggered by single action potentials in pyramidal cell dendrites, with signal-to-noise ratio and photostability substantially better than those of {GCaMP2}, {D3cpVenus} and {TN-XXL.} In Caenorhabditis elegans chemosensory neurons and the Drosophila melanogaster antennal lobe, sensory stimulation-evoked fluorescence responses were significantly enhanced with {GCaMP3} (4-6-fold). In somatosensory and motor cortical neurons in the intact mouse, {GCaMP3} detected calcium transients with amplitudes linearly dependent on action potential number. Long-term imaging in the motor cortex of behaving mice revealed large fluorescence changes in imaged neurons over months.},
+	number = {12},
+	journal = {Nature Methods},
+	author = {Tian, Lin and Hires, S Andrew and Mao, Tianyi and Huber, Daniel and Chiappe, M Eugenia and Chalasani, Sreekanth H and Petreanu, Leopoldo and Akerboom, Jasper and {McKinney}, Sean A and Schreiter, Eric R and Bargmann, Cornelia I and Jayaraman, Vivek and Svoboda, Karel and Looger, Loren L},
+	month = dec,
+	year = {2009},
+	note = {{PMID:} 19898485},
+	keywords = {Animals, Brain, Caenorhabditis elegans, Calcium, Cell Line, Drosophila melanogaster, Fluorescence Resonance Energy Transfer, Humans, Mice, Neurons},
+	pages = {875--881}
+},
+
 @article{arous_automated_2010,
 	title = {Automated imaging of neuronal activity in freely behaving Caenorhabditis elegans},
 	issn = {{1872-678X}},
@@ -1376,11 +1379,7 @@ C. Elegans: Loopy Foraging. Laser ablation
 	author = {Arous, Juliette Ben and Tanizawa, Yoshinori and Rabinowitch, Ithai and Chatenay, Didier and Schafer, William R},
 	month = jan,
 	year = {2010},
-	note = {{PMID:} 20096306},
-	annote = {Chris was excited about this. He said:
-
-Yup, and we could also have the upper hand here by showing a causative role of a neuron in the behavior, which imaging alone cannot do. 
-I chunked and/or bleached several strains on Friday.  Are the new software updates basically ready to go ?}
+	note = {{PMID:} 20096306}
 },
 
 @article{clark_temporal_2007,
@@ -1395,8 +1394,7 @@ I chunked and/or bleached several strains on Friday.  Are the new software updat
 	month = jun,
 	year = {2007},
 	keywords = {{PQE}  - definite citation},
-	pages = {6083--6090},
-	annote = {Aravi's Ca+ {FRET} imaging of thermosensing.}
+	pages = {6083--6090}
 },
 
 @article{miyawaki_innovations_2005,
@@ -1413,8 +1411,7 @@ I chunked and/or bleached several strains on Friday.  Are the new software updat
 	year = {2005},
 	note = {{PMID:} 16242400},
 	keywords = {Animals, Brain, Brain Mapping, Diagnostic Imaging, Humans, Luminescent Proteins, Neurons, Synapses},
-	pages = {189--199},
-	annote = {Good review! Very useful background on Fluorescence and applications to neurobio.}
+	pages = {189--199}
 },
 
 @article{park_enhanced_2008,
@@ -1452,6 +1449,22 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 20696376},
 	keywords = {Age Factors, Amino Acid Sequence, Animals, Animals, Genetically Modified, Drosophila, Drosophila Proteins, Ion Channels, Larva, Locomotion, Molecular Sequence Data, Predictive Value of Tests, {TRPC} Cation Channels},
 	pages = {373--380}
+},
+
+@article{niebur_theory_1991,
+	title = {Theory of the locomotion of nematodes: Dynamics of undulatory progression on a surface},
+	volume = {60},
+	issn = {0006-3495},
+	shorttitle = {Theory of the locomotion of nematodes},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19431807},
+	abstract = {We develop a model of the undulatory locomotion of nematodes, in particular that of Caenorhabditis elegans, based on mechanics. The model takes into account the most important forces acting on a moving worm and allows the computer simulation of a creeping nematode. These forces are produced by the interior pressure in the liquid-filled body cavity, the elasticity of the cuticle, the excitation of certain sets of muscles and the friction between the body and its {support.We} propose that muscle excitation patterns can be generated by stretch receptor control. By solving numerically the equations of motion of the model of the nematode, we demonstrate that these muscle excitation patterns are suitable for the propulsion of the animal.},
+	number = {5},
+	journal = {Biophysical Journal},
+	author = {Niebur, E and Erdös, P},
+	month = nov,
+	year = {1991},
+	note = {{PMID:} 19431807},
+	pages = {1132--1146}
 },
 
 @article{wicks_dynamic_1996,
@@ -1535,10 +1548,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	author = {Croll, {NA}},
 	year = {1975},
 	keywords = {{PQE}  - definite citation, Sniffing / Foraging},
-	pages = {159--176},
-	annote = {Earliest (1975) description of sniffing / foraging. Can't find this anywhere online. Maybe {LIbrary?}
-
- }
+	pages = {159--176}
 },
 
 @article{zhang_red-shifted_2008,
@@ -1737,6 +1747,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	keywords = {Chemotaxis, {PQE}  - definite citation, thermosensing}
 },
 
+@article{richmond_unc-13_1999,
+	title = {{UNC-13} is required for synaptic vesicle fusion in C. elegans},
+	volume = {2},
+	issn = {1097-6256},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/10526333},
+	doi = {10.1038/14755},
+	abstract = {We analyzed the synaptic physiology of unc-13 mutants in the nematode C. elegans. Mutants of unc-13 had normal nervous system architecture, and the densities of synapses and postsynaptic receptors were normal at the neuromuscular junction. However, the number of synaptic vesicles at neuromuscular junctions was two- to threefold greater in unc-13 mutants than in wild-type animals. Most importantly, evoked release at both {GABAergic} and cholinergic synapses was almost absent in unc-13 null alleles, as determined by whole-cell, voltage-clamp techniques. Although mutant synapses had morphologically docked vesicles, these vesicles were not competent for release as assayed by spontaneous release in calcium-free solution or by the application of hyperosmotic saline. These experiments support models in which {UNC-13} mediates either fusion of vesicles during exocytosis or priming of vesicles for fusion.},
+	number = {11},
+	journal = {Nature Neuroscience},
+	author = {Richmond, J E and Davis, W S and Jorgensen, E M},
+	month = nov,
+	year = {1999},
+	note = {{PMID:} 10526333},
+	keywords = {Alleles, Animals, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Helminth Proteins, Mutation, Nerve Tissue Proteins, Neuromuscular Junction, Synaptic Transmission, Synaptic Vesicles},
+	pages = {959--964}
+},
+
 @article{gloria-soria_npr-1_2008,
 	title = {npr-1 Regulates foraging and dispersal strategies in Caenorhabditis elegans},
 	volume = {18},
@@ -1751,8 +1778,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	year = {2008},
 	note = {{PMID:} 18993077},
 	keywords = {Alleles, Amino Acid Substitution, Animals, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Environment, Feeding Behavior, Polymorphism, Genetic, Receptors, Neuropeptide Y, Selection {(Genetics)}},
-	pages = {1694--1699},
-	annote = {It seems athough foraging  is used here in a broader sense. Although it may still be worth exploring.}
+	pages = {1694--1699}
 },
 
 @article{huang_automated_2008,
@@ -1822,8 +1848,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	journal = {Nat Meth},
 	author = {Drew, Patrick J and Shih, Andy Y and Driscoll, Jonathan D and Knutsen, Per Magne and Blinder, Pablo and Davalos, Dimitrios and Akassoglou, Katerina and Tsai, Philbert S and Kleinfeld, David},
 	month = oct,
-	year = {2010},
-	annote = {10.1038/nmeth.1530}
+	year = {2010}
 },
 
 @article{gray_circuit_2005,
@@ -1845,8 +1870,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 @misc{_current_????,
 	title = {Current Biology},
 	url = {http://www.cell.com/current-biology/citationexport},
-	howpublished = {http://www.cell.com/current-biology/citationexport},
-	annote = {C. elegans Responds to Chemical Repellents by Integrating Sensory Inputs from the Head and the Tail Massimo A. Hilliard, Cornelia I. Bargmann, Paolo Bazzicalupo Current Biology - 30 April 2002 {(Vol.} 12, Issue 9, pp. 730-734)}
+	howpublished = {http://www.cell.com/current-biology/citationexport}
 },
 
 @misc{_mcintire_????-1,
@@ -2009,8 +2033,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	journal = {{WormBook}},
 	author = {Goodman, Miriam B.},
 	month = jan,
-	year = {2006},
-	annote = {This article provides an overview of the different neurons involved in mechanosensation.}
+	year = {2006}
 },
 
 @article{ward_chemotaxis_1973,
@@ -2028,11 +2051,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	year = {1973},
 	note = {{PMID:} 4351805},
 	keywords = {Acetates, Adenosine Monophosphate, Ammonia, Ammonium Chloride, Bromides, Chemotaxis, Chlorides, Cyclic {AMP}, Cyclic {GMP}, Cysteine, Histidine, {Hydrogen-Ion} Concentration, Iodides, Lithium, Lysine, Magnesium, Mutation, Nematoda, Potassium, {PQ}, {PQE}  - definite citation, {PQE} Specific Aim 2, Sodium},
-	pages = {817--21},
-	annote = {Foundation paper for chemotaxis. Uses {cAMP.} Basically the whole paper is critical.},
-	annote = {{"The} orientation behavior of the mutants tracked shows that sensory receptors on the head alone mediate the orientation response, and that the length fo the head and its motion are critical for orietnation."
-
-{"In} either case the orientation requires successive side-to-side (actually dorso-ventral) comparisons of stimulus intensity and is, therefore, a kilnotaxis."}
+	pages = {817--21}
 },
 
 @article{bryden_neural_2008,
@@ -2167,8 +2186,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	author = {Faumont, Serge and Lockery, Shawn R.},
 	month = mar,
 	year = {2006},
-	pages = {1976--1981},
-	annote = {Calcium Imaging}
+	pages = {1976--1981}
 },
 
 @article{lockery_artificial_2008,
@@ -2329,8 +2347,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	year = {1975},
 	note = {{PMC433138}},
 	keywords = {{PQE}  - definite citation, {PQE} Specific Aim 1, Print Me!, thermosensing},
-	pages = {4061–4065},
-	annote = {Primary starting point for thermoatxis informaiton. Authors describe simple and eleganet thermotaxis assay, for example they use frozen (but melting) acetic acid in a small vial to keep part of their petri dish at 16 celsius. Very clever.}
+	pages = {4061–4065}
 },
 
 @article{mclntire_gabaergic_1993,
@@ -2344,12 +2361,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	month = jul,
 	year = {1993},
 	keywords = {Important, {PQE}  - definite citation, Sniffing / Foraging},
-	pages = {337--341},
-	annote = {Foraging defined. See Fig 3b.
-
-Table 1b discusses "loopy Foraging" phenotype.
-
-This is caused by killing {RMEV}, {RMEL}, {RMER}, {RMED.} or in the unc-25 {(GABA-)} mutant.}
+	pages = {337--341}
 },
 
 @article{mclntire_genes_1993,
@@ -2363,8 +2375,7 @@ This is caused by killing {RMEV}, {RMEL}, {RMER}, {RMED.} or in the unc-25 {(GAB
 	month = jul,
 	year = {1993},
 	keywords = {Sniffing / Foraging},
-	pages = {334--337},
-	annote = {Genetic Basis for {"Foraging"}}
+	pages = {334--337}
 },
 
 @article{geldhof_combinatorial_2006,
@@ -2408,10 +2419,7 @@ This is caused by killing {RMEV}, {RMEL}, {RMER}, {RMED.} or in the unc-25 {(GAB
 	author = {Ramot, Daniel and {MacInnis}, Bronwyn L and Goodman, Miriam B},
 	year = {2008},
 	keywords = {{FRET}, {PQE}  - definite citation},
-	pages = {908--915},
-	annote = {Uses nifty Ca+ {FRET} trick monitor {AFD.}
-
- }
+	pages = {908--915}
 },
 
 @article{luo_sensorimotor_2006,
@@ -2426,8 +2434,7 @@ This is caused by killing {RMEV}, {RMEL}, {RMER}, {RMED.} or in the unc-25 {(GAB
 	month = dec,
 	year = {2006},
 	keywords = {{PQE}  - definite citation, thermosensing},
-	pages = {4652--4662},
-	annote = {This may be a good place to start. Here Aravi shows how the worms are constrained to go round in circles.}
+	pages = {4652--4662}
 },
 
 @article{chiu_adaptive_2009,
@@ -2444,6 +2451,23 @@ This is caused by killing {RMEV}, {RMEL}, {RMER}, {RMED.} or in the unc-25 {(GAB
 	year = {2009},
 	note = {{PMID:} 19376960},
 	pages = {1392--1404}
+},
+
+@article{cully_cloning_1994,
+	title = {Cloning of an avermectin-sensitive glutamate-gated chloride channel from Caenorhabditis elegans},
+	volume = {371},
+	issn = {0028-0836},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/7935817},
+	doi = {10.1038/371707a0},
+	abstract = {The avermectins are a family of macrocyclic lactones used in the control of nematode and arthropod parasites. Ivermectin (22,23-dihydroavermectin B1a) is widely used as an anthelmintic in veterinary medicine and is used to treat onchocerciasis or river blindness in humans. Abamectin (avermectin B1a) is a miticide and insecticide used in crop protection. Avermectins interact with vertebrate and invertebrate {GABA} receptors and invertebrate glutamate-gated chloride channels. The soil nematode Caenorhabditis elegans has served as a useful model to study the mechanism of action of avermectins. A C. elegans messenger {RNA} expressed in Xenopus oocytes encodes an avermectin-sensitive glutamate-gated chloride channel. To elucidate the structure and properties of this channel, we used Xenopus oocytes for expression cloning of two functional complementary {DNAs} encoding an avermectin-sensitive glutamate-gated chloride channel. We find that the electrophysiological and structural properties of these proteins indicate that they are new members of the ligand-gated ion channel superfamily.},
+	number = {6499},
+	journal = {Nature},
+	author = {Cully, D F and Vassilatis, D K and Liu, K K and Paress, P S and Van der Ploeg, L H and Schaeffer, J M and Arena, J P},
+	month = oct,
+	year = {1994},
+	note = {{PMID:} 7935817},
+	keywords = {Amino Acid Sequence, Animals, Base Sequence, Caenorhabditis elegans, Cell Membrane Permeability, Cells, Cultured, Chloride Channels, Cloning, Molecular, {DNA}, Complementary, Electrophysiology, Escherichia coli, Glutamic Acid, Humans, Ion Channel Gating, Ivermectin, Molecular Sequence Data, Oocytes, Sequence Homology, Amino Acid, Xenopus},
+	pages = {707--711}
 },
 
 @article{horvitz_serotonin_1982,
@@ -2535,7 +2559,7 @@ This is caused by killing {RMEV}, {RMEL}, {RMER}, {RMED.} or in the unc-25 {(GAB
 	title = {An optical marker based on the {UV-induced} green-to-red photoconversion of a fluorescent protein},
 	volume = {99},
 	issn = {0027-8424},
-	url = {http://www.ncbi.nlm.nih.gov.ezp-prod1.hul.harvard.edu/pubmed/12271129},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/12271129},
 	doi = {10.1073/pnas.202320599},
 	abstract = {We have cloned a gene encoding a fluorescent protein from a stony coral, Trachyphyllia geoffroyi, which emits green, yellow, and red light. The protein, named Kaede, includes a tripeptide, {His-Tyr-Gly}, that acts as a green chromophore that can be converted to red. The red fluorescence is comparable in intensity to the green and is stable under usual aerobic conditions. We found that the green-red conversion is highly sensitive to irradiation with {UV} or violet light (350-400 nm), which excites the protonated form of the chromophore. The excitation lights used to elicit red and green fluorescence do not induce photoconversion. Under a conventional epifluorescence microscope, Kaede protein expressed in {HeLa} cells turned red in a graded fashion in response to {UV} illumination; maximal illumination resulted in a 2,000-fold increase in the ratio of red-to-green signal. These color-changing properties provide a simple and powerful technique for regional optical marking. A focused {UV} pulse creates an instantaneous plane source of red Kaede within the cytosol. The red spot spreads rapidly throughout the cytosol, indicating its free diffusibility in the compartment. The extensive diffusion allows us to delineate a single neuron in a dense culture, where processes originating from many different somata are present. Illumination of a focused {UV} pulse onto the soma of a Kaede-expressing neuron resulted in filling of all processes with red fluorescence, allowing visualization of contact sites between the red and green neurons of interest.},
 	number = {20},
@@ -2569,12 +2593,7 @@ This is caused by killing {RMEV}, {RMEL}, {RMER}, {RMED.} or in the unc-25 {(GAB
 @misc{_wormatlas:_????-1,
 	title = {{WormAtlas:} {CEP}},
 	url = {http://www.wormatlas.org/neurons.htm/cep.htm},
-	howpublished = {http://www.wormatlas.org/neurons.htm/cep.htm},
-	annote = {{CEP} is mechanosensory neuron in the head. It is dopminergic. It has cilliated endings. It is  neuron of cephalic sensilla.
-
- 
-
- }
+	howpublished = {http://www.wormatlas.org/neurons.htm/cep.htm}
 },
 
 @misc{_real-time_????,
@@ -2766,10 +2785,7 @@ This is caused by killing {RMEV}, {RMEL}, {RMER}, {RMED.} or in the unc-25 {(GAB
 	author = {Mehta, Samar B. and Whitmer, Diane and Figueroa, Rodolfo and Williams, Ben A. and Kleinfeld, David},
 	month = feb,
 	year = {2007},
-	pages = {e15 EP --},
-	annote = {{"Neural} loops" and "active perception"
-
-Rats sense their envirnment by active whisking.}
+	pages = {e15 EP --}
 },
 
 @article{stirman_high-throughput_2010,
@@ -2952,14 +2968,7 @@ After a wound, differentiation into mucous and ciliated cells was possible and p
 	year = {1995},
 	note = {{PMID:} 8531727},
 	keywords = {Ablation, Animals, Caenorhabditis elegans, Cell Death, Lasers, Print Me!},
-	pages = {225--250},
-	annote = {Interesting Fact: The smallest of C. Elegans nuclei are 2um in diameter.},
-	annote = {Laser Facts: "dye laser pumped by a nitrogen laser. The pulse energy
-necessary to kill cells is roughly 5 {mJ."}
-
-Want less than 70ns pulses. 2ns is fine.
-
- }
+	pages = {225--250}
 },
 
 @article{rankin_context_2000,
