One stab at talking about noise subtraction.
Lots of gammas and q's. I think I'm going to avoid this formulation for now.

--- a/harvard-thesis.cls
+++ b/harvard-thesis.cls
@@ -74,7 +74,7 @@
 
 
 %Set fonts for Mac Specific (Comment out on Windows XP)
-\setsansfont[Scale=MatchLowercase,Mapping=tex-text]{Helvetica Neue} 
+%\setsansfont[Scale=MatchLowercase,Mapping=tex-text]{Helvetica Neue} 
 %\setmonofont[Scale=MatchLowercase]{Consolas}
 
 % some definitions
