started to add chenxiang's paper...
made the r-ri addtion

--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,7 @@
 \include{chapters/proprioceptive}
 \include{chapters/omegaTurn}
 %\include{chapters/mating}
-%\include{chapters/DNAbarcode}
+\include{chapters/barcode}
 \include{chapters/barcodeAnalysis}
 %\include{chapters/conclusion}
 
